// Since: cosmos-sdk 0.43
syntax = "proto3";
package cosmos.authz.v1beta1;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "cosmos/authz/v1beta1/authz.proto";
import "cosmos/msg/v1/msg.proto";
import "amino/amino.proto";

option go_package                      = "cosmossdk.io/x/authz";
option (gogoproto.goproto_getters_all) = false;

// Msg defines the authz Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // Grant grants the provided authorization to the grantee on the granter's
  // account with the provided expiration time. If there is already a grant
  // for the given (granter, grantee, Authorization) triple, then the grant
  // will be overwritten.
  rpc Grant(MsgGrant) returns (MsgGrantResponse);

  // Exec attempts to execute the provided messages using
  // authorizations granted to the grantee. Each message should have only
  // one signer corresponding to the granter of the authorization.
  rpc Exec(MsgExec) returns (MsgExecResponse);

  // Revoke revokes any authorization corresponding to the provided method name on the
  // granter's account that has been granted to the grantee.
  rpc Revoke(MsgRevoke) returns (MsgRevokeResponse);

  // RevokeAll revokes all grants issued by the specified granter.
  rpc RevokeAll(MsgRevokeAll) returns (MsgRevokeAllResponse) {
    option (cosmos_proto.method_added_in) = "cosmos-sdk 0.51";
  }

  // PruneExpiredGrants prunes the expired grants. Currently up to 75 at a time.
  rpc PruneExpiredGrants(MsgPruneExpiredGrants) returns (MsgPruneExpiredGrantsResponse) {
    option (cosmos_proto.method_added_in) = "cosmos-sdk 0.51";
  }
}

// MsgGrant is a request type for Grant method. It declares authorization to the grantee
// on behalf of the granter with the provided expiration time.
message MsgGrant {
  option (cosmos.msg.v1.signer) = "granter";
  option (amino.name)           = "cosmos-sdk/MsgGrant";

  string granter = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string grantee = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  cosmos.authz.v1beta1.Grant grant = 3 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// MsgGrantResponse defines the Msg/MsgGrant response type.
message MsgGrantResponse {}

// MsgExec attempts to execute the provided messages using
// authorizations granted to the grantee. Each message should have only
// one signer corresponding to the granter of the authorization.
message MsgExec {
  option (cosmos.msg.v1.signer) = "grantee";
  option (amino.name)           = "cosmos-sdk/MsgExec";

  string grantee = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // Execute Msg.
  // The x/authz will try to find a grant matching (msg.signers[0], grantee, MsgTypeURL(msg))
  // triple and validate it.
  repeated google.protobuf.Any msgs = 2 [(cosmos_proto.accepts_interface) = "cosmos.base.v1beta1.Msg"];
}

// MsgExecResponse defines the Msg/MsgExecResponse response type.
message MsgExecResponse {
  repeated bytes results = 1;
}

// MsgRevoke revokes any authorization with the provided sdk.Msg type on the
// granter's account with that has been granted to the grantee.
message MsgRevoke {
  option (cosmos.msg.v1.signer) = "granter";
  option (amino.name)           = "cosmos-sdk/MsgRevoke";

  string granter      = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string grantee      = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string msg_type_url = 3;
}

// MsgRevokeResponse defines the Msg/MsgRevokeResponse response type.
message MsgRevokeResponse {}

// MsgRevokeAll revokes all grants issued by the specified granter.
message MsgRevokeAll {
  option (cosmos_proto.message_added_in) = "cosmos-sdk 0.51";
  option (cosmos.msg.v1.signer)          = "granter";
  option (amino.name)                    = "cosmos-sdk/MsgRevokeAll";

  string granter = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// MsgRevokeAllResponse defines the Msg/MsgRevokeAllResponse response type.
message MsgRevokeAllResponse {
  option (cosmos_proto.message_added_in) = "cosmos-sdk 0.51";
}

// MsgPruneExpiredGrants prunes the expired grants.
message MsgPruneExpiredGrants {
  option (cosmos_proto.message_added_in) = "x/authz v0.2.0";
  option (cosmos.msg.v1.signer)          = "pruner";

  string pruner = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// MsgPruneExpiredGrantsResponse defines the Msg/MsgPruneExpiredGrantsResponse response type.
message MsgPruneExpiredGrantsResponse {
  option (cosmos_proto.message_added_in) = "x/authz v0.2.0";
}
